# vhdl-combinators-examples

./: .gitignore  README.md  stack.yaml  vhdl-combinators-examples.cabal
incrementer/clash/: Makefile  README.md  cabal.project  simple.cabal  stack.yaml
incrementer/clash/src/: HandshakeParallel.hs  HandshakeParallelBubble.hs  HandshakeRV.hs  HandshakeSerial.hs  Incrementer.hs  Pipeline.hs
incrementer/clash/syn/parallel/: build_u16.tcl  build_u8_8.tcl  run.sh
incrementer/clash/syn/parallel-bubble-squeeze/: build_u16.tcl  build_u8_8.tcl  run.sh
incrementer/clash/syn/serial/: Makefile  build_u16.tcl  build_u8_8.tcl  run.sh
incrementer/kansas-lava/: .gitignore  Makefile  README.md  incrementer.cabal  incrementer.hs  stack.yaml
incrementer/kansas-lava/syn/parallel/: build_u16.tcl  build_u16_rtl.tcl  build_u8_8.tcl  build_u8_8_rtl.tcl  run.sh
incrementer/kansas-lava/syn/parallel-bubble-squeeze/: build_u16.tcl  build_u16_rtl.tcl  build_u8_8.tcl  build_u8_8_rtl.tcl  run.sh
incrementer/kansas-lava/syn/parallel-bubble-squeeze/const/: const.xdc  const_fixed.xdc  const_rtl_dsl.xdc  const_rtl_dsl_fixed.xdc
incrementer/kansas-lava/syn/parallel/const/: const.xdc  const_fixed.xdc  const_rtl_dsl.xdc  const_rtl_dsl_fixed.xdc
incrementer/kansas-lava/syn/serial/: Makefile  build_u16.tcl  build_u16_rtl.tcl  build_u8_8.tcl  build_u8_8_rtl.tcl  run.sh
incrementer/kansas-lava/syn/serial/const/: const.xdc  const_fixed.xdc  const_rtl_dsl.xdc  const_rtl_dsl_fixed.xdc
incrementer/kansas-lava/testbench/vunit-ghdl/parallel/: run.py  run_fixed.py
incrementer/kansas-lava/testbench/vunit-ghdl/parallel-bubble-squeeze/: Lava_new.vhd  run.py  run_fixed.py  tb_example.vhd  tb_example_fixed.vhd
incrementer/kansas-lava/testbench/vunit-ghdl/parallel/data/: out.csv
incrementer/kansas-lava/testbench/vunit-ghdl/serial/: run.py  run_fixed.py  tb_example.vhd
incrementer/kansas-lava/vhdl/parallel/: incrementer.vhd  incrementer_fixed.vhd  incrementer_rtl_dsl.vhd  incrementer_rtl_dsl_fixed.vhd
incrementer/kansas-lava/vhdl/parallel-bubble-squeeze/: incrementer.vhd  incrementer_fixed.vhd  incrementer_rtl_dsl.vhd  incrementer_rtl_dsl_fixed.vhd
incrementer/kansas-lava/vhdl/serial/: incrementer.vhd  incrementer_fixed.vhd  incrementer_rtl_dsl.vhd  incrementer_rtl_dsl_fixed.vhd
incrementer/loc/clash/: Pipeline.hs
incrementer/loc/kansas-lava/: Pipeline.hs
incrementer/loc/mwc/: Pipeline.hs
incrementer/vhdl-codegen/: .gitignore  Main.hs  Makefile  Opt.hs  stack.yaml  vhdl-gen.cabal
incrementer/vhdl-codegen/syn/parallel/: build_uq16.tcl  build_uq_8_8.tcl
incrementer/vhdl-codegen/syn/parallel-bubble-squeeze/: build_uq16.tcl  build_uq_8_8.tcl
incrementer/vhdl-codegen/syn/serial/: Makefile  build_uq16.tcl  build_uq8_8.tcl
ip-comparisons/convolution-encoder/ip/: README.md  rebuild.tcl
ip-comparisons/convolution-encoder/ip/cons/: consts.xdc
ip-comparisons/convolution-encoder/ip/rtl/: dummy.vhd
ip-comparisons/convolution-encoder/vhdl-codegen/: .gitignore  Encoder.hs  Main.hs  Makefile  Tests.hs  run.py  stack.yaml  vhdl-gen.cabal
ip-comparisons/convolution-encoder/vhdl-codegen/syn/: Makefile  rebuild.tcl
ip-comparisons/cordic/ip/: README.md  rebuild.tcl
ip-comparisons/cordic/vhdl-codegen/: Main.hs  Makefile  Opt.hs  run.py  stack.yaml  vhdl-gen.cabal
ip-comparisons/divider/ip/: Makefile  README.md  rebuild.tcl
ip-comparisons/divider/vhdl-codegen/: .gitignore  Divider.hs  Main.hs  Makefile  Opt.hs  Test.hs  run.py  vhdl-gen.cabal
ip-comparisons/divider/vhdl-codegen/syn/: Makefile  build_parallel.tcl  build_serial.tcl
ip-comparisons/divider/vhdl-codegen/syn/const/: const_parallel.xdc  const_serial.xdc
tools/vivadostats/: setup.py
tools/vivadostats/vivadostats/: command_line.py
(+80 files in other folders)
