name:          vhdl-combinators-examples
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016-2021 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://github.com/mainland/vhdl-combinators-examples
bug-reports:   https://github.com/mainland/vhdl-combinators-examples/issues
category:      Language
synopsis:      Examples from the Metaprogramming with Combinators paper
tested-with:   GHC==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4
               || ==8.10.4 || ==9.0.1

description:
  This package contains examples from the paper /Metaprogramming with Combinators/.

build-type: Simple

executable incrementer
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    incrementer/combinator/src

  build-depends:
    vhdl-codegen,
    base                >= 4.5 && < 5,
    containers          >= 0.5 && < 0.7,
    fixed-q             >= 0.1 && < 0.2,
    language-vhdl-quote >= 0.1 && < 0.2,
    mainland-pretty     >= 0.7 && < 0.8,
    srcloc              >= 0.4 && < 0.7

  other-modules:
    Opt

source-repository head
  type:     git
  location: git://github.com/mainland/vhdl-combinators-examples.git
