name:               incrementer
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20


executable incrementer
  main-is:            incrementer.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      sized-types,
                      kansas-lava
